--- a/src/main/resources/templates/th/member/mypage/profile/allPhoto.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allPhoto.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
-    <title>질문 게시판</title>
-</head>
+    <title>내 게시글</title>
 
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+    </th:block>
+
+</head>
 <body>
+<div layout:fragment="content">
+
+
 
 </div>
 </body>
