--- a/src/main/resources/templates/th/photoBoard/photoBoardList.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardList.html
@@ -8,7 +8,7 @@
 
 <h2>사진 목록</h2><!-- 완성되면 삭제-->
 
-<div class="container">
+<!--<div class="container">
     <table class="table table-hover">
         <th:block th:each="photo : ${photolist}">
             <tr>
@@ -17,6 +17,6 @@
             </tr>
         </th:block>
     </table>
-</div>
+</div>-->
 </body>
 </html>
