--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -24,8 +24,10 @@
         <h1>
             <a href="">연간</a>
         </h1>날짜 : <input id="dateCalendar" type='date'/> - <input id="dateCalendar2" type='date'/><button onclick="getDate()">클릭</button>
-        <div>
+        <div id="hoho">
         <canvas id="myChart" style="width:100%; height:100%; float:none"></canvas>
+        </div>
+        <div id="field">
         </div>
         <!-- 차트 지우고 다시 만들어아햐나? -->
         <script th:inline="javascript" type="text/javascript">
@@ -90,6 +92,7 @@
                             jsonData = data;
                             drawGraph();
                             drawCanvas();
+                            reloadFunc();
                         },
                         error: function () {
                             alert("err");
@@ -103,7 +106,17 @@
 
             }
 
+            function reloadFunc(){
+                /*var div = document.createElement('div');
+                div.innerHTML = document.getElementById('myChart').innerHTML;
+                $( 'div' ).remove( '#hoho' );
+                alert("리로드");
+                document.getElementById('hoho').appendChild(div);
+*/
 
+
+                //$('#myChart').load(location.href + '#hoho');
+            }
             function drawGraph(){
                 console.log("drawGraph()  실행 !" );
                 console.log("jsonGraph는?" + jsonData);
