--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -104,17 +104,17 @@
                         </select>
                     </div>
                     <div>
-                        <select class="custom-select col-md-1">
-                            <option th:value="0">1</option>
-                            <option th:value="1">2</option>
-                            <option th:value="2">3</option>
-                            <option th:value="3">4</option>
-                            <option th:value="4">5</option>
-                            <option th:value="5">6</option>
-                            <option th:value="6">7</option>
-                            <option th:value="7">8</option>
-                            <option th:value="8">9</option>
-                            <option th:value="9">10</option>
+                        <select class="custom-select col-md-1" name="hohoBox">
+                            <option th:value="1">1</option>
+                            <option th:value="2">2</option>
+                            <option th:value="3">3</option>
+                            <option th:value="4">4</option>
+                            <option th:value="5">5</option>
+                            <option th:value="6">6</option>
+                            <option th:value="7">7</option>
+                            <option th:value="8">8</option>
+                            <option th:value="9">9</option>
+                            <option th:value="10">10</option>
                         </select>
 
                     </div>
@@ -189,210 +189,244 @@
         //var arrValue = new Array();
         var goSession;
         var sessionCheck = sessionStorage.getItem("ProductNameSession");
+        var localCheck = localStorage.getItem("saveL")
+        if(localCheck == null){
+        console.log("localSession 없음");
+        }else{
+            console.log("localSession 이ㅆ음");
+        }
+
+        var valList;
+        var localStored = new Array();
+
+        var a;
+        var b;
+
+        if(localCheck != null){
+            localStored = JSON.parse(localCheck);
+            console.log("로칼 stroed : " + localStored);
+            b = localStored.length;
+            console.log("로칼 len : " + b);
+            for(var i=0; i<b ; i++){
+                console.log(localStored[i]);
+            }
+        }else{
+            console.log("localSession업음");
+            b=0;
+            console.log("stored없음");
+        }
+
         if (sessionCheck != null) {
             var stored = JSON.parse(sessionCheck);
-            console.log("stroed : " + stored + "stored[1] = " + stored[1]);
+            a = stored.length;
+
         } else {
-            console.log("stored 없음");
-        }
-        console.log("sessionCheck : " + sessionCheck + "getItem" + sessionStorage.getItem(sessionStorage.key(1)));
-        /*if (sessionCheck == null) {
-            console.log("sessionCheck is null");
-        } else {
-            console.log(" 길이 : " + sessionStorage.getItem(sessionStorage.key(1)).length);
-        }*/
-        //sessionStorage.key(1)
-        var a;
-
-        //이건 인덱스로 가져와야 되는데 key 값을 어떻게 가져올까
-        //console.log("키 확인 : "+ sessionStorage.key(1));
-        //console.log("값 확인 : "+ sessionCheck[2]);
-        //console.log("값 길이 확인 : " + sessionCheck.length);
-
-        //세션 값의 빈자리에 저장시켜야되는데 길이가 다른값 포함된 길이로 잡힘
-        //값이 있는 자리만 추출하려 했는데 함수가 없는듯
-
-        // 세션 받아와서  값 추가한 뒤  다시 세션에 저장
-        var valList;
-        var getHoho;
-        if (sessionCheck == null) {
             valList = new Array();
             a = 0;
-        } else {
-            a = stored.length;
-            console.log("stored Len : " + a);
-            /* valList = sessionCheck;
-             a=valList.length;
-             console.log("a : " + a);*/
         }
-        var key;
+
 
         function saveSessionStorage() {
-            if(memId == null){
+            if (memId == null) {
 
-            console.log("saveSessionStorage 실행");
-            // 변수를 선언한다.
-            var key = document.getElementById("productName").value;
-            var value = document.getElementById("productNo").value;
-            var colorValue = $('#colorSelect').text();
-            var qtyValue = $('#qtyValue').val();
-            console.log("colorValue : "+ colorValue);
-            //var colValue = document.getElementById("").value;
-            //var qtyValue = document.getElementById("").value;
-            console.log("productNoValue  :  "+value);
-            console.log("qtyValue  :  "+qtyValue);
+                console.log("saveSessionStorage 실행");
+                // 변수를 선언한다.
+                var value = document.getElementById("productNo").value;
+                var colorValue = $('#colorSelect').text();
+                var qtyValue = $("select[name=hohoBox]").val();
+                console.log("colorValue : " + colorValue);
+                //var colValue = document.getElementById("").value;
+                //var qtyValue = document.getElementById("").value;
+                console.log("productNoValue  :  " + value);
+                console.log("qtyValue  :  " + qtyValue);
 
-            var sasdf = ${"#qtyVla
-            if (sessionCheck == null) {
-                console.log("sessionCheck is null");
-                while (true) {
-                    console.log(a + "번째");
-                    if (valList[a] == null) {
-                        console.log("확인 : " + valList);
-                        valList[a] = value;
-                        console.log("varList" + a + "번째 : " + valList[a]);
-                        break;
+                var arr = [value, colorValue, qtyValue];
+                console.log("arr ? " + arr);
+                var list;
+                /*
+
+
+                var arr2 = ["잉", "이", "상"];
+                console.log("arr : " + arr);
+                localStorage.setItem("saveP", arr);
+                var list = [arr, arr2];
+                console.log("List입니다 : " + list);
+                localStorage.setItem("saveL", JSON.stringify(list));
+*/
+
+                var localSessionItem = localStorage.getItem("saveL");
+                console.log("localSessionItem" + localSessionItem);
+
+                if (localSessionItem == null) {
+                    console.log("localSessionItem is Null입니다")
+                    b = 0;
+                    console.log("before arr : " + arr);
+                    localStored[0] = arr;
+                    /*if(localStored == null){
+                        localStored[0] = 1;
+                    }*/
+                    console.log(localStored[0]);
+                    console.log("after arr : " + localStored);
+                    //localStorage.setItem("saveL", localStored);
+                    //localStored[b] = JSON.stringify(arr);
+                    //console.log(localStored[b]);
+                    localStorage.setItem("saveL", JSON.stringify(localStored));
+                } else {
+                    b = 0;
+                    console.log("localSession is not Null : ");
+                    for(var i = 0; i<localStored.length; i++) {
+                        console.log("localStored : " + localStored);
+                        if (localStored[b][0] == value && localStored[b][1] == colorValue) {
+                            console.log("로컬 이미 저장돼있습니다");
+                            break;
+                        }
+                        if(localStored[b+1] == undefined){
+                            console.log("흠 Null");
+                            console.log(b);
+                            localStored[b+1]=arr;
+                            console.log("bf"+arr);
+                            console.log("af"+JSON.stringify(arr));
+                            console.log("b+1은? "+localStored[b+1]+" & localStored : "+localStored);
+                            localStorage.setItem("saveL", JSON.stringify(localStored));
+                            break;
+                            }
+                            b++;
+                        }
                     }
-                    a++;
-                }
-                sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
-            } else {
-                a=0;
-                console.log("sessionCheck is  not null");
-                while (true) {
-                    console.log("stored[a] : " + stored[a]);
-                    console.log("value : " + value);
-                    if(stored[a] == value){
-                        alert("이미 저장돼있습니다");
-                        break;
-                    }
-                    if (stored[a] == null) {
-                        console.log("stored" + a + " is Null");
-                        stored[a] = value;
-                        console.log("append 한 값은 : " + stored);
-                        break;
+// ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ 로컬끝
+                    if (sessionCheck == null) {
+                        console.log("sessionCheck is null");
+                        while (true) {
+                            console.log(a + "번째");
+                            if (valList[a] == null) {
+                                valList[a] = value;
+                                break;
+                            }
+                            a++;
+                        }
+                        sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
                     } else {
-                        console.log("stored" + a + " is Not Null");
+                        a = 0;
+                        console.log("sessionCheck is  not null");
+                        while (true) {
+                            if (stored[a] == value) {
+                                alert("세션 이미 저장돼있습니다");
+                                break;
+                            }
+                            if (stored[a] == null) {
+                                stored[a] = value;
+                                break;
+                            } else {
+                            }
+                            a++;
+                        }
+                        sessionStorage.setItem("ProductNameSession", JSON.stringify(stored));
                     }
-                    a++;
+
+
+                    // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
+                    // sessionStorage.setItem(key, value);
+                    //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
+                ajaxSessionStorage();
                 }
-                sessionStorage.setItem("ProductNameSession", JSON.stringify(stored));
+            else
+                {
+                    console.log("memId : ~ajax " + memId);
+
+                    var selectOption = document.getElementById("inputGroupSelect01");
+                    console.log(selectOption);
+                    selectOption = selectOption.options[selectOption.selectedIndex].value;
+                    console.log("옵션 : " + selectOption);
+                    var qty = document.getElementById("qty").value;
+                    console.log("qty : " + qty | 0);
+                    //var pName = document.getElementById("pName").value;
+                    //console.log("pName" + pName);
+                    var pNo = document.getElementById("productNo").value;
+                    console.log("pNo" + pNo);
+
+                    if (qty == "") {
+                        alert("숫자 입력하세요");
+
+                    } else {
+                        $.ajax({ // 세션 보내기 ajax
+                            //console.log("hi");
+                            url: "/basketMember",
+                            type: "POST",
+                            data: {
+                                memberId: memId,
+                                productNo: pNo,
+                                productColor: selectOption,
+                                qty: qty
+                            }
+                            ,
+                            success: function (e) {
+                                alert("basketMem 완료")
+
+                            },
+                            error: function () {
+                                alert("test err");
+                            }
+                        });
+                    }
+
+                }
             }
 
+            function ajaxSessionStorage() {
 
-            // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
-            // sessionStorage.setItem(key, value);
-            //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
-            printSessionStorage();
-
-        }
-        else{
-            console.log("memId : ~ajax " + memId);
-
-            var selectOption = document.getElementById("inputGroupSelect01");
-            console.log(selectOption);
-            selectOption = selectOption.options[selectOption.selectedIndex].value;
-            console.log("옵션 : "+selectOption);
-            var qty = document.getElementById("qty").value;
-            console.log("qty : "+qty|0);
-            //var pName = document.getElementById("pName").value;
-            //console.log("pName" + pName);
-            var pNo = document.getElementById("productNo").value;
-            console.log("pNo" + pNo);
-
-            if(qty == ""){
-                    alert("숫자 입력하세요");
-
-                }else{
+            console.log("ajaxSessionStorage 실행");
+            hoho = [localStorage.getItem("saveL")];
+            console.log("real"+hoho+"len"+hoho.length);
+            hoSession = JSON.parse(localStorage.getItem("saveL"));
+            console.log("ex"+hoSession.length+hoSession);
+           /* JSON.stringify(hoSession);
+            console.log("af"+JSON.stringify(hoSession).length+JSON.stringify(hoSession));
+            JSON.parse(hoSession);
+            console.log("prse :" + JSON.parse(hoSession).length+JSON.parse(hoSession));*/
+                var go='ho';
                 $.ajax({ // 세션 보내기 ajax
                     //console.log("hi");
-                    url: "/basketMember",
+                    url: "/basketLocal",
                     type: "POST",
-                    data: {
-                        memberId : memId,
-                        productNo : pNo,
-                        productColor : selectOption,
-                        qty : qty
-                    }
+                    dataType : 'json',
+                    traditional: true,
+                    data: {'hoho': hoSession}
                     ,
                     success: function (e) {
-                        alert("basketMem 완료")
+                        alert("ajax완료")
+                    },error: function () {
+                        console.log("test err");
+                    }
+            });
+
+            /*console.log("ajaxSessionStorage 실행");
+                var i = 0;
+
+                goSession = sessionStorage.getItem("ProductNameSession")
+                console.log("exgoSession" + goSession);
+                JSON.parse(goSession);
+                console.log("afgoSession" + goSession);
+                $.ajax({ // 세션 보내기 ajax
+                    //console.log("hi");
+                    url: "/basketSession",
+                    type: "POST",
+                    traditional: true,
+                    data: {'hoho': goSession}
+                    ,
+                    success: function (e) {
+                        var result = e.result
+                        console.log("success");
+                        //console.log(hoho3);
+                        console.log(e);
+                        alert("ajax완료")
 
                     },
                     error: function () {
                         alert("test err");
                     }
-                });
+                });*/
             }
 
-        }
-        }
-        //고쳐야함
-
-
-        document.addEventListener("DOMContentLoaded", function () {
-            if (window.sessionStorage.length != 0) {
-
-                console.log("sessionStorage가 있음");
-                //sessionStorage.clear();
-            } else {
-                console.log("담긴 장바구니 0.");
-            }
-
-        });
-
-        function printSessionStorage() {
-            console.log("printSessionStorage 실행");
-            var i = 0;
-            //console.log("len : " + len);
-            // 값이 있는 주소만 가져오기
-
-
-            //console.log(arrValue);
-            // console.log(arrValue[0]);
-            /*for (var i = 0; i < sessionStorage.length; i++) {
-                var keyTest = window.sessionStorage;
-                arrValue[i] = JSON.stringify(sessionStorage.getItem(keyTest));
-                //    console.log(keyTest);
-                //   console.log(window.sessionStorage.length);        }
-                //console.log("keyTest : " + keyTest);
-                //console.log("Json:"+JSON.stringify(sessionStorage.getItem(keyTest)));
-
-            }*/
-            /*var form = {
-                value : 1,
-                hoho : arrValue
-            }*/
-            //console.log(" hoho 0: " +form.hoho[0]);
-            //console.log(" hoho 1 : " +form.hoho[1]);
-            //console.log("form : " +form.hoho[2]);
-            //jQuery.ajaxSettings.traditional = true;
-            goSession = sessionStorage.getItem("ProductNameSession")
-            console.log("exgoSession" + goSession);
-            JSON.parse(goSession);
-            console.log("afgoSession" + goSession);
-            $.ajax({ // 세션 보내기 ajax
-                //console.log("hi");
-                url: "/basketSession",
-                type: "POST",
-                traditional: true,
-                data: {'hoho': goSession}
-                ,
-                success: function (e) {
-                    var result = e.result
-                    console.log("success");
-                    //console.log(hoho3);
-                    console.log(e);
-                    alert("ajax완료")
-
-                },
-                error: function () {
-                    alert("test err");
-                }
-            });
-
-
-        }
     </script>
 </div>
 </body>
