--- a/src/main/resources/templates/th/admin/chat/chatList.html
+++ b/src/main/resources/templates/th/admin/chat/chatList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="th/layout/adminLayout">
 <head>
@@ -18,17 +18,17 @@
             <table th:id="roomList" class="roomList"></table>
         </div>
     </div>
-        <table class="table">
+        <table class="table table-hover">
             <thead>
             <tr class="list-group list-group-horizontal">
-                <th>회원아이디</th>
-                <th></th>
+                <th style="width:70%">회원아이디</th>
+                <th style="width:30%">상담시작</th>
             </tr>
             </thead>
-            <tbody th:each="roomList: ${roomLists}">
-            <tr class="list-group list-group-horizontal">
-                <td th:text="${roomList.memberId}"></td>
-                <td><button class="btn btn-primary" th:data-id="${roomList.chatId}" id="createRoom" onclick="enterRoom()">상담시작</button></td>
+            <tbody>
+            <tr class="list-group list-group-horizontal" th:each="roomList: ${roomLists}">
+                <td th:text="${roomList.memberId}" style="width:70%"></td>
+                <td style="width:30%"><input type="button" class="btn btn-primary" value="상담시작" th:data-id="${roomList.chatId}" id="createRoom" onclick="enterRoom()"/></td>
             </tr>
             </tbody>
         </table>
@@ -57,7 +57,15 @@
     <script th:inline="javascript" type="text/javascript">
         var chatId=$('#createRoom').attr('data-id');
         function enterRoom() {
-            location.href="/enter/"+chatId;
+            document.getElementById('createRoom').value="상담중";
+            $('#createRoom').prop("disabled", false);
+
+            var url="/enter/"+chatId;
+            window.open(url,"new_popup","scrollbars=no, width=350, height=400, menubar=false, location=false");
+            formName.target="new_popup";
+            formName.action="/chat";
+            formName.method="post";
+            formName.submit();
         }
     </script>
 </div>
