--- a/src/main/resources/templates/th/main/storeMain.html
+++ b/src/main/resources/templates/th/main/storeMain.html
@@ -15,22 +15,23 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div class="fixed-btn-area" sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')">
-        <div class="fixed-wrap">
-            <!--<form name="createRoom" th:action="@{/chat}" th:method="post"/>
-            <a href="#" onclick="javascript:document.createRoom.submit();">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M12 1c-6.628 0-12 4.573-12 10.213 0 2.39.932 4.591 2.427 6.164l-2.427 5.623 7.563-2.26c9.495 2.598 16.437-3.251 16.437-9.527 0-5.64-5.372-10.213-12-10.213z"/>
-                </svg>
-            </a>-->
-            <form name="createRoom"/>
-            <a href="#" onclick="enterChat(createRoom)">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <a href="#" onclick="enterChat(createRoom)">
+        <div class="fixed-btn-area" sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')">
+            <div class="fixed-wrap">
+                <!--<form name="createRoom" th:action="@{/chat}" th:method="post"/>
+                <a href="#" onclick="javascript:document.createRoom.submit();">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path d="M12 1c-6.628 0-12 4.573-12 10.213 0 2.39.932 4.591 2.427 6.164l-2.427 5.623 7.563-2.26c9.495 2.598 16.437-3.251 16.437-9.527 0-5.64-5.372-10.213-12-10.213z"/>
-                </svg>
-            </a>
+                    </svg>
+                </a>-->
+                <form name="createRoom"/>
+                    <svg class="bi bi-chat-dots" style="color: #fff" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                        <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                    </svg>
+            </div>
         </div>
-    </div>
+    </a>
     <div id="store-index">
         <section class="container store-index-section store-index-recommend-list" th:style="${showRecommend}!=null ? 'display:block' : 'display:none'">
             <h1>추천 상품</h1>
@@ -103,7 +104,7 @@
         });*/
 
         function enterChat(formName){
-            window.open("","new_popup","");
+            window.open("","new_popup","scrollbars=no, width=350, height=400, menubar=false, location=false");
             formName.target="new_popup";
             formName.action="/chat";
             formName.method="post";
