--- a/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
     <title>사진 상세보기</title>
+
+
 </head>
 <body>
+<div layout:fragment="content">
+      <div class="form-group">
+        <th:block th:text="${photodetail.areaCode}, ${photodetail.styleCode}, ${photodetail.placeCode}, ${photodetail.houseCode}"/>
+      </div>
+      <div class="form-group">
+          <th:block th:src="'/uploadImg'+${photodetail.photoImg1}, '/uploadImg'+${photodetail.photoImg2}, '/uploadImg'+${photodetail.photoImg3}, '/uploadImg'+${photodetail.photoImg4}, '/uploadImg'+${photodetail.photoImg5}"/>
+      </div>
+      <div class="form-group">
+          <th:block th:text="${photodetail.photoContent}"/>
+      </div>
 
+    <div class="form-group">
+        <input type="button" id="like" name="like" /> <!-- 버튼 이미지만들고, th:if로 좋아요, 취소 만들어야함. 스크랩도 마찬가지-->
+        <input type="button" id="scrap" name="scrap"/>
+        <th:block
+    </div>
+
+</div>
 </body>
 </html>
