--- a/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
+++ b/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
@@ -36,6 +36,7 @@
 <body>
 
 <div layout:fragment="content">
+    <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <div th:class="conteiner-nav">
         <nav>
             <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
