--- a/src/main/resources/templates/th/fragments/sidebarfilter.html
+++ b/src/main/resources/templates/th/fragments/sidebarfilter.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="sidebarFragment">
-    <div class="nav margin-left">
+    <div class="nav">
         <div class="item">
             <input type="checkbox" id="A"/>
             <label for="A">가구</label>
