--- a/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
+++ b/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
@@ -13,53 +13,52 @@
     <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<div th:fragment="sidebarFragment">
-
+<div layout:fragment="content">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="orderList-tab" data-toggle="tab" href="#orderList" role="tab" aria-controls="orderList" aria-selected="true">Home</a>
+            <a class="nav-link active" id="orderList-tab" data-toggle="tab" href="#orderList" role="tab"
+               aria-controls="orderList" aria-selected="true">주문내역</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="myReview-tab" data-toggle="tab" href="#myReview" role="tab" aria-controls="myReview" aria-selected="false">Profile</a>
+            <a class="nav-link" id="myReview-tab" data-toggle="tab" href="#myReview" role="tab" aria-controls="myReview"
+               aria-selected="false">나의 리뷰</a>
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="orderList" role="tabpanel" aria-labelledby="orderList-tab">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th scope="col">주문일자</th>
+                    <th scope="col">주문 상품 정보</th>
+                    <th scope="col">상품금액(수량)</th>
+                    <th scope="col">배송비</th>
+                    <th scope="col">주문상태</th>
+                    <th scope="col">확인/취소/리뷰</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each=" orderList: ${orderListVOS}">
+                    <td th:text="${orderList.orderDate}"></td>
+                    <td th:text="${orderList.productName} + '(' + ${orderList.modelName} + '/'+ ${orderList.colorName} + ')'"></td>
+                    <td th:text="${orderList.totalPrice} + '원' + ' ' +'(' + ${orderList.orderQty} + '개' + ')'"></td>
+                    <td th:text="무료"></td>
+                    <td th:text="${orderList.orderType}"></td>
+                    <td>
 
 
-sadsadsad
 
-
-
-
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="myReview-tab">
+        <div class="tab-pane fade" id="myReview" role="tabpanel" aria-labelledby="myReview-tab">
 
-
-
-
-asdasdasd
-
+            asd
 
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </div>
