--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -89,7 +89,7 @@ footer
 
 .layout-footer {
     display: block;
-    background-color: #fafafa
+    /*background-color: #fafafa*/
 }
 
 .layout-footer a::-moz-focus-inner {
