--- a/src/main/resources/templates/th/layout/defaultLayout.html
+++ b/src/main/resources/templates/th/layout/defaultLayout.html
@@ -26,12 +26,12 @@
 <body>
 <div class="layout">
     <th:block th:replace="th/fragments/header :: headerFragment"></th:block>
-
+    <th:block layout:fragment="sidebarFragment"></th:block>
     <th:block layout:fragment="content"></th:block>
 
     <th:block th:replace="th/fragments/footer :: footerFragment"></th:block>
 
-    </div>
+
 </div>
 </body>
 </html>
