--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,13 +1,18 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
 
-
+body {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
 
 
 .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0;
-    width: 400px;
+    width: 500px;
 }
 
 .dropdown-item{
