--- a/src/main/resources/templates/th/member/basket/nonMemberBasket.html
+++ b/src/main/resources/templates/th/member/basket/nonMemberBasket.html
@@ -140,7 +140,7 @@
                                                                                             <option value="8">9</option>
                                                                                             <option value="9">10
 
-                                                                                            <option value="11" selected="1"></option>
+                                                                                            <option value="11" selected th:text="${list.qty}"></option>
                                                                                             </option>
                                                                                         </select><span
                                                                                             class="select-input__icon"><svg
