--- a/src/main/resources/templates/th/layout/SellerLayout.html
+++ b/src/main/resources/templates/th/layout/SellerLayout.html
@@ -25,7 +25,8 @@
         <link th:href="@{plugins/summernote/summernote-bs4.css}" rel="stylesheet">
         <script type="text/javascript" th:src="@{/js/adminlte.min.js}"></script>
         <script type="text/javascript" th:src="@{/plugins/summernote/summernote-bs4.min.js}"></script>
-        <script type="text/javascript" th:src="@{/plugins/jquery/jquery.min.js}"></script>
+        <script type="text/javascript" th:src="@{/plugins/jquery/jquer
+        y.min.js}"></script>
 <!--        <script type="text/javascript" th:src="@{/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
     </head>
     <body>
