--- a/src/main/resources/templates/th/layout/adminLayout.html
+++ b/src/main/resources/templates/th/layout/adminLayout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
 </head>
 <body>
 <div class="layout">
@@ -17,7 +17,6 @@
 
     <th:block layout:fragment="content"></th:block>
 
-    </div>
 </div>
 </body>
 </html>
